Compiladores/src/mint/MintParser.java
// $ANTLR 3.4 C:\\Users\\komandox\\Desktop\\Mint\\Mint.g 2012-05-26 16:51:33
 package mint; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class MintParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCESS", "AND", "ARGS", "ARRAY_ACCESS", "ARRAY_CREATION", "ARRAY_TYPE", "ASSIGN_BAND", "ASSIGN_BOR", "ASSIGN_DIV", "ASSIGN_MOD", "ASSIGN_MULT", "ASSIGN_NOT", "ASSIGN_PLUS", "ASSIGN_SUB", "ASSIGN_XOR", "BLOCK", "BODY", "BOOLEAN", "CALL", "CAST", "CHAR_LITERAL", "CLASS", "COMMA", "COMMENT", "CTOR", "DEC", "DEDENT", "DO", "DOT", "ELSE", "ELSIF", "EQUAL", "EQUALS", "ERROR", "EXTENDS", "FALSE", "FIELD", "FIELD_ACCESS", "FLOAT", "FLOAT_LITERAL", "GREATER", "GTE", "IDENTIFIER", "IF", "INC", "INDENT", "INDENTATION", "INT", "INTEGER_LITERAL", "LBRACKET", "LESS", "LPAREN", "LTE", "METHOD", "METHOD_ACCESS", "NAME", "NEW", "NEWLINE", "OP_BAND", "OP_BNOT", "OP_BOR", "OP_CARET", "OP_DIV", "OP_MINUS", "OP_MOD", "OP_MULT", "OP_NOT", "OP_OR", "OP_PLUS", "PARAMS", "PASS", "POST", "PRIVATE", "PROGRAM", "PROTECTED", "PUBLIC", "RBRACKET", "RETURN", "RPAREN", "SELECTOR", "STRING_LITERAL", "SUPER", "THIS", "TOKEN", "TRUE", "VOID", "WHILE", "WS"
    };

    public static final int EOF=-1;
    public static final int ACCESS=4;
    public static final int AND=5;
    public static final int ARGS=6;
    public static final int ARRAY_ACCESS=7;
    public static final int ARRAY_CREATION=8;
    public static final int ARRAY_TYPE=9;
    public static final int ASSIGN_BAND=10;
    public static final int ASSIGN_BOR=11;
    public static final int ASSIGN_DIV=12;
    public static final int ASSIGN_MOD=13;
    public static final int ASSIGN_MULT=14;
    public static final int ASSIGN_NOT=15;
    public static final int ASSIGN_PLUS=16;
    public static final int ASSIGN_SUB=17;
    public static final int ASSIGN_XOR=18;
    public static final int BLOCK=19;
    public static final int BODY=20;
    public static final int BOOLEAN=21;
    public static final int CALL=22;
    public static final int CAST=23;
    public static final int CHAR_LITERAL=24;
    public static final int CLASS=25;
    public static final int COMMA=26;
    public static final int COMMENT=27;
    public static final int CTOR=28;
    public static final int DEC=29;
    public static final int DEDENT=30;
    public static final int DO=31;
    public static final int DOT=32;
    public static final int ELSE=33;
    public static final int ELSIF=34;
    public static final int EQUAL=35;
    public static final int EQUALS=36;
    public static final int ERROR=37;
    public static final int EXTENDS=38;
    public static final int FALSE=39;
    public static final int FIELD=40;
    public static final int FIELD_ACCESS=41;
    public static final int FLOAT=42;
    public static final int FLOAT_LITERAL=43;
    public static final int GREATER=44;
    public static final int GTE=45;
    public static final int IDENTIFIER=46;
    public static final int IF=47;
    public static final int INC=48;
    public static final int INDENT=49;
    public static final int INDENTATION=50;
    public static final int INT=51;
    public static final int INTEGER_LITERAL=52;
    public static final int LBRACKET=53;
    public static final int LESS=54;
    public static final int LPAREN=55;
    public static final int LTE=56;
    public static final int METHOD=57;
    public static final int METHOD_ACCESS=58;
    public static final int NAME=59;
    public static final int NEW=60;
    public static final int NEWLINE=61;
    public static final int OP_BAND=62;
    public static final int OP_BNOT=63;
    public static final int OP_BOR=64;
    public static final int OP_CARET=65;
    public static final int OP_DIV=66;
    public static final int OP_MINUS=67;
    public static final int OP_MOD=68;
    public static final int OP_MULT=69;
    public static final int OP_NOT=70;
    public static final int OP_OR=71;
    public static final int OP_PLUS=72;
    public static final int PARAMS=73;
    public static final int PASS=74;
    public static final int POST=75;
    public static final int PRIVATE=76;
    public static final int PROGRAM=77;
    public static final int PROTECTED=78;
    public static final int PUBLIC=79;
    public static final int RBRACKET=80;
    public static final int RETURN=81;
    public static final int RPAREN=82;
    public static final int SELECTOR=83;
    public static final int STRING_LITERAL=84;
    public static final int SUPER=85;
    public static final int THIS=86;
    public static final int TOKEN=87;
    public static final int TRUE=88;
    public static final int VOID=89;
    public static final int WHILE=90;
    public static final int WS=91;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public MintParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public MintParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return MintParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\komandox\\Desktop\\Mint\\Mint.g"; }


        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {

            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            
            System.out.println(String.format("error %s : %s %s", e.line, e.charPositionInLine, msg));
            
            // Now do something with hdr and msg...
        }


    public static class dedent_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "dedent"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:286:1: dedent : ( DEDENT | EOF );
    public final MintParser.dedent_return dedent() throws RecognitionException {
        MintParser.dedent_return retval = new MintParser.dedent_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set1=null;

        Object set1_tree=null;

        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:286:9: ( DEDENT | EOF )
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:
            {
            root_0 = (Object)adaptor.nil();


            set1=(Token)input.LT(1);

            if ( input.LA(1)==EOF||input.LA(1)==DEDENT ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set1)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "dedent"


    public static class newline_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "newline"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:288:1: newline : ( NEWLINE | EOF );
    public final MintParser.newline_return newline() throws RecognitionException {
        MintParser.newline_return retval = new MintParser.newline_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set2=null;

        Object set2_tree=null;

        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:288:9: ( NEWLINE | EOF )
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:
            {
            root_0 = (Object)adaptor.nil();


            set2=(Token)input.LT(1);

            if ( input.LA(1)==EOF||input.LA(1)==NEWLINE ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set2)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "newline"


    public static class compilationUnit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compilationUnit"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:1: compilationUnit : ( NEWLINE | classDeclaration )* EOF -> ^( PROGRAM ( classDeclaration )* ) ;
    public final MintParser.compilationUnit_return compilationUnit() throws RecognitionException {
        MintParser.compilationUnit_return retval = new MintParser.compilationUnit_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token NEWLINE3=null;
        Token EOF5=null;
        MintParser.classDeclaration_return classDeclaration4 =null;


        Object NEWLINE3_tree=null;
        Object EOF5_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_classDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule classDeclaration");
        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:17: ( ( NEWLINE | classDeclaration )* EOF -> ^( PROGRAM ( classDeclaration )* ) )
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:19: ( NEWLINE | classDeclaration )* EOF
            {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:19: ( NEWLINE | classDeclaration )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NEWLINE) ) {
                    alt1=1;
                }
                else if ( (LA1_0==CLASS||LA1_0==PRIVATE||(LA1_0 >= PROTECTED && LA1_0 <= PUBLIC)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:20: NEWLINE
            	    {
            	    NEWLINE3=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_compilationUnit2294); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_NEWLINE.add(NEWLINE3);


            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:30: classDeclaration
            	    {
            	    pushFollow(FOLLOW_classDeclaration_in_compilationUnit2298);
            	    classDeclaration4=classDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classDeclaration.add(classDeclaration4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_compilationUnit2302); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF5);


            // AST REWRITE
            // elements: classDeclaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 291:53: -> ^( PROGRAM ( classDeclaration )* )
            {
                // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:56: ^( PROGRAM ( classDeclaration )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:291:66: ( classDeclaration )*
                while ( stream_classDeclaration.hasNext() ) {
                    adaptor.addChild(root_1, stream_classDeclaration.nextTree());

                }
                stream_classDeclaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"


    public static class literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "literal"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:293:1: literal : ( INTEGER_LITERAL | FLOAT_LITERAL | CHAR_LITERAL | STRING_LITERAL | 'true' | 'false' );
    public final MintParser.literal_return literal() throws RecognitionException {
        MintParser.literal_return retval = new MintParser.literal_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set6=null;

        Object set6_tree=null;

        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:293:9: ( INTEGER_LITERAL | FLOAT_LITERAL | CHAR_LITERAL | STRING_LITERAL | 'true' | 'false' )
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:
            {
            root_0 = (Object)adaptor.nil();


            set6=(Token)input.LT(1);

            if ( input.LA(1)==CHAR_LITERAL||input.LA(1)==FALSE||input.LA(1)==FLOAT_LITERAL||input.LA(1)==INTEGER_LITERAL||input.LA(1)==STRING_LITERAL||input.LA(1)==TRUE ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, 
                (Object)adaptor.create(set6)
                );
                state.errorRecovery=false;
                state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "literal"


    public static class type_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "type"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:295:1: type : ( primitiveType | referenceType );
    public final MintParser.type_return type() throws RecognitionException {
        MintParser.type_return retval = new MintParser.type_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        MintParser.primitiveType_return primitiveType7 =null;

        MintParser.referenceType_return referenceType8 =null;



        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:295:6: ( primitiveType | referenceType )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==BOOLEAN||LA2_0==FLOAT||LA2_0==INT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==IDENTIFIER||LA2_1==RPAREN) ) {
                    alt2=1;
                }
                else if ( (LA2_1==LBRACKET) ) {
                    alt2=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA2_0==IDENTIFIER) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:295:8: primitiveType
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_primitiveType_in_type2347);
                    primitiveType7=primitiveType();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, primitiveType7.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:295:24: referenceType
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_referenceType_in_type2351);
                    referenceType8=referenceType();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, referenceType8.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "type"


    public static class primitiveType_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "primitiveType"
    // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:297:1: primitiveType : ( 'int' | 'float' | 'boolean' );
    public final MintParser.primitiveType_return primitiveType() throws RecognitionException {
        MintParser.primitiveType_return retval = new MintParser.primitiveType_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token set9=null;

        Object set9_tree=null;

        try {
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:297:15: ( 'int' | 'float' | 'boolean' )
            // C:\\Users\\komandox\\Desktop\\Mint\\Mint.g:
            {
            root_0 = (Object)adaptor.nil();


            set9=(Token)input.LT(1);
